--- a/Facebook Troll/Facebook Troll/Facebook Troll.csproj
+++ b/Facebook Troll/Facebook Troll/Facebook Troll.csproj
@@ -102,6 +102,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utility\GoogleAd\GoogleAdHelper.cs" />
     <Compile Include="Utility\InneractiveNokiaAd\IaLocationClass.cs" />
     <Compile Include="Utility\InneractiveNokiaAd\InneractiveAdHelper.cs" />
     <Compile Include="Utility\InneractiveNokiaAd\InneractiveAdLocation.cs" />
@@ -147,7 +148,6 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\Images\app.icon.300x300.png" />
     <Content Include="Assets\Images\app.icon.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -164,6 +164,8 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Utility\GoogleAd\GoogleAds.dll" />
+    <Content Include="Utility\GoogleAd\GoogleAds.XML" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
@@ -174,6 +176,7 @@
     <EmbeddedResource Include="Resources\AppResources.vi.resx" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="GoogleAds, Version=6.5.13.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Inneractive.Ad">
       <HintPath>Utility\InneractiveNokiaAd\Inneractive.Ad.dll</HintPath>
     </Reference>
